add pages folder

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         </main>
         <!-- Form box -->
         <div class="form-box">
-            <form action="./ishuman.html">
+            <form action="./pages/ishuman.html">
                 <input type="checkbox" id="checkbox" required="required" />
                 <label for="checkbox">Are you human? </label>
                 <button class="btn btn-dark" type="submit">Submit</button>
